[gd_scene load_steps=8 format=3 uid="uid://ep6caqfnoo2x"]

[ext_resource type="Texture2D" uid="uid://c2id8upa45hxx" path="res://Textures/TilesPath.png" id="1_45k0f"]
[ext_resource type="Script" path="res://PathNode.gd" id="1_nu11g"]
[ext_resource type="Script" path="res://WorldMap.gd" id="2_im0ch"]
[ext_resource type="PackedScene" uid="uid://bkdxy3anuwyjy" path="res://PlayerMap.tscn" id="3_re16i"]
[ext_resource type="Script" path="res://LevelNode.gd" id="4_b3hy5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1f7ae"]
resource_name = "Path"
texture = ExtResource("1_45k0f")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/left_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/top_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/top_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/left_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/left_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
2:3/0/terrains_peering_bit/top_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/bottom_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/right_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/top_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/bottom_side = 0
1:3/0/terrains_peering_bit/left_side = 0
1:3/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_6cmps"]
tile_size = Vector2i(8, 8)
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Path"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_1f7ae")

[node name="WorldMap" type="TileMap"]
tile_set = SubResource("TileSet_6cmps")
cell_quadrant_size = 8
format = 2
layer_0/name = "Path"
layer_0/tile_data = PackedInt32Array(786436, 0, 0, 786437, 0, 0, 786435, 0, 0, 786438, 0, 0, 786434, 0, 0, 786439, 0, 0, 786433, 0, 0, 786440, 65536, 2, 786432, 0, 2, 720904, 65536, 0, 720896, 65536, 0, 655368, 65536, 0, 655360, 65536, 0, 589832, 65536, 1, 589824, 65536, 0, 524288, 0, 1, 589831, 0, 0, 524289, 0, 0, 589830, 0, 2, 524290, 0, 0, 524294, 131072, 2, 524291, 0, 0, 458758, 65536, 0, 524292, 0, 0, 393222, 65536, 0, 524293, 0, 0, 327686, 196608, 3)
script = ExtResource("2_im0ch")

[node name="PathNode" type="Node2D" parent="."]
position = Vector2(36, 100)
z_index = 1
script = ExtResource("1_nu11g")
InitialState = 1
NextNodePaths = [NodePath("../Node2d"), NodePath("../Node2d2")]
NodesToActivate = []
PathSpeed = 0.05

[node name="Node2d" type="Node2D" parent="."]
position = Vector2(68, 76)
script = ExtResource("1_nu11g")
NextNodePaths = [NodePath("../Node2d3")]
NodesToActivate = []
PathSpeed = 0.05

[node name="Node2d2" type="Node2D" parent="."]
position = Vector2(4, 68)
script = ExtResource("1_nu11g")
NextNodePaths = [NodePath("../Node2d3")]
NodesToActivate = []
PathSpeed = 0.05

[node name="Node2d3" type="Node2D" parent="."]
position = Vector2(52, 44)
script = ExtResource("4_b3hy5")
Colour1 = Color(0, 0, 0, 1)
Colour2 = Color(0, 0, 0, 1)
Colour3 = Color(0, 0, 0, 1)
Colour4 = Color(0, 0, 0, 1)
NextNodePaths = []
NodesToActivate = []

[node name="PlayerMap" parent="." instance=ExtResource("3_re16i")]
position = Vector2(36, 92)
